src/style.css
* {
    box-sizing: border-box;
    margin: auto;
    font-family:monospace;
    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
    overflow: hidden;
}

:root {
    --del-width: 30px;
}

button {
    cursor: pointer;
}

/*top bar*/
h1 {
    width: 100%;
    height: 45px;
    text-align: center;
    background-color: rgb(189, 203, 207);
    border-bottom: 2px solid rgb(132, 155, 161);
    font-size: 3rem;
    z-index: 1;
}

/*Folders*/
#expand {
    position: absolute;
    top: 55px;
    left: 5px;
    border: none;
    border-radius: 2px;
    font-size: 1.3rem;
    z-index: 10;
}

#side-bar {
    height: calc(100vh - 45px);
    background-color: rgb(247, 247, 247);
    border-right: 2px solid rgb(180, 180, 180);
    z-index: 9;
    overflow-y: scroll;
}

.add{
    display: block;
    margin: auto;
    margin-top: 5px;
    margin-bottom: 5px;
    height: 50px;
    aspect-ratio: 1;
    border: 1px solid rgb(180, 180, 180);
    border-radius: 2000px;
    font-size: 2rem;
}

.add:hover {
    background-color: rgb(8, 219, 8);
    box-shadow: 0 0 0.3rem rgb(8, 219, 8);
    color: white;
}

/*forms*/
form {
    position: absolute;
    display: block;
    text-align: center;
    margin: auto;
    inset: 0;
    padding: 10px;
    text-align: center;
    width: 300px;
    height: 110px;
    background-color: rgb(189, 203, 207);
    border: 2px solid rgb(132, 155, 161);
    z-index: 20;
}

label {
    font-size: 1.5rem;
}

.name-folder {
    width: 250px;
    height: 30px;
    margin: 5px;
}

#blur {
    position: absolute;
    inset: 0;
    z-index: 15;
    background-color: grey;
    opacity: 0.5;
    backdrop-filter: blur(0.1rem);
}

/*Folders styling*/
.top {
    border-top: 1px solid rgb(180, 180, 180);
}

.folders-list {
    width: 100%;
    border-bottom: 1px solid rgb(180, 180, 180);
    padding-left: 2px;
    cursor: pointer;
}

.folder{
    display: inline-block;
    width: calc(100% - var(--del-width));
    height: 30px;
    border: none;
    overflow: hidden;
    text-overflow:ellipsis;
    text-align: left;
}

.folder:hover {
    background-color: rgb(211, 211, 211);
}

.delete {
    display: inline-block;
    width: var(--del-width);
    height: 30px;
    border: none;
    background-color: white;
    border-left: 1px solid rgb(180, 180, 180);
}

.delete:hover {
    background-color: rgb(255, 0, 0);
    color: white;
}

#items {
    height: 100%;
    overflow-y: scroll;
}

/*Tasks styling*/
.title {
    font-size: 2rem;
    margin-top: 5px;
    margin-left: 10px;
    width: 97%;
    overflow: hidden;
    text-overflow:ellipsis;
    border: none;
}

.task {
    width: 98%;
    margin-top: 5px;
    border: 1px solid grey;
    border-bottom: none;
}

.wrapper {
    display: inline-flex;
    width: 100%;
    height: 100%;
    border-bottom: 1px solid grey;
} 
    .name {
        width: 100%;
        margin: 0;
        padding-left: 5px;
        border: none;
        border-right: 1px solid grey;
    }

    .hide {
        height: 34px;
        min-width: 50px;
        border: none;
        border-right: 1px solid grey;
    }

    .hide:hover {
        background-color: rgb(211, 211, 211);
    }

    .date {
        min-width: 136px;
        margin: 5px;
        cursor: pointer;
    }

    input[type=checkbox]{
        -webkit-appearance: none;
        min-width: 30px;
        width: 30px;
        aspect-ratio: 1;
        border: 1px solid grey;
        border-radius: 2px;
        margin-left: 5px;
        margin-right: 5px;
        cursor: pointer;
        text-align: center;
    }

    .priority:checked {
        background-color: yellow;
        box-shadow: 0 0 1rem yellow;
    }

    .priority:checked:after {
        content: '!';
        font-size: 2rem;
    }

    .completion:checked {
        background-color: rgb(8, 219, 8);
        box-shadow: 0 0 0.5rem rgb(8, 219, 8);
    }

    .completion:checked:after {
        content: '\2713';
        font-size: 2rem;
    }

    .delTask {
        display: inline-block;
        width: 34px;
        height: 34px;
        border: none;
        border-left: 1px solid grey;
        justify-content: center;
        padding: auto;
    }

    .delTask:hover {
        background-color: rgb(255, 0, 0);
        color: white;
    }
    
.description {
    display: none;
    flex-direction: column;
    width: 98%;
    margin-top: 5px;
    resize: vertical;
    margin-bottom: 5px;
}
/*Scalability*/
@media screen and (min-width: 600px){
    #side-bar {
        position: absolute;
        top: 45px;
        left: 0;
        width: 200px;
    }

    #expand {
        display: none;
    }

    h2 {
        display: flex;
        margin: 5px;
    }
    
    #content {
        position: absolute;
        top: 45px;
        left: 200px;
        width: calc(100% - 200px);
        height: calc(100vh - 45px);
    }    
}

@media screen and (max-width: 600px){
    .title {
        margin-left: 35px;
        width: 90%;
    }

    #side-bar {
        position: absolute;
        top: 45px;
        left: 0;
        width: 100%;
    }

    h2 {
        height: 40px;
        padding-top: 10px;
        margin-left: 35px;
    }
    #content {
        position: absolute;
        top: 45px;
        left: 0px;
        width: 100%;
        height: calc(100vh - 45px);
    }    
}

/*scroll bars*/
.scroll {
    -ms-overflow-style: none;
    scrollbar-width: none; 
}

.scroll::-webkit-scrollbar {
    display: none;
}

